<resources>
    <string name="app_name">Expenses Advisor</string>
    <string name="title_checks_list">Чеки</string>
    <string name="title_qr_scanner">Сканировать</string>
    <string name="title_statistics">Статистика</string>

    <!-- login screen string constants -->
    <string name="title_sign_up_link">
        <u>Нет аккаунта?\nЗарегистрируйтесь здесь</u>.
    </string>
    <string name="title_login">логин</string>
    <string name="title_password">пароль</string>
    <string name="title_password_confirm">подтвердите пароль</string>
    <string name="title_login_button">войти</string>
    <string name="title_signup_button">регистрация</string>
    <string name="title_set_common_category">Установить общую категорию на чек</string>

    <string name="title_pie_chart">Доля расходов на категории товаров</string>
    <string name="title_line_chart">Динамика ежедневных расходов</string>
    <string name="description_pie_chart">Отображение ваших расходов на отдельные категории товаров в виде круговой диаграммы</string>
    <string name="description_line_chart">Отображение ваших расходов по дням в течение последнего месяца</string>

    <string name="sample_check_date">15 сентября 2018, 12:15</string>
    <string name="sample_check_sum">1500.00</string>
    <string name="sample_check_place">Пятерочка</string>

    <string name="sample_item_name">Йогурт Чудо питьевой</string>
    <string name="sample_item_sum">45.50</string>
    <string name="sample_item_categoty">Продукты</string>
    <string name="sample_item_quantity">3</string>
</resources>
